--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,11 @@
             <artifactId>bmcc_vgop_frame_redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>5.2.0.RELEASE</version>
-        </dependency>-->
+        </dependency>
 
 
         <!--mysql-mybatis-->
