--- a/src/main/resources/config/dev/db.properties
+++ b/src/main/resources/config/dev/db.properties
@@ -5,9 +5,9 @@ mysql.InitialPoolSize=50
 mysql.MaxActive=200
 mysql.MinIdle=50
 
-mysql.db.url=jdbc:mysql://47.104.184.185:3306/test_db?useUnicode=true&characterEncoding=utf8&autoReconnect=true&rewriteBatchedStatements=TRUE&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useSSL=false
-mysql.db.user=test
-mysql.db.password=test1234
+mysql.db.url=jdbc:mysql://47.104.184.185:3306/pancho?useUnicode=true&characterEncoding=utf8&autoReconnect=true&rewriteBatchedStatements=TRUE&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useSSL=false
+mysql.db.user=root
+mysql.db.password=ma356527
 
 
 
